--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,8 +32,12 @@ set -ga terminal-overrides ",*256col*:Tc"
 # Send xterm compatible control arrow keys so they work with Vim.
 setw -g xterm-keys on
 
-# Ensure window titles get renamed automatically.
-setw -g automatic-rename
+# # Ensure window titles get renamed automatically.
+# setw -g automatic-rename
+
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
 
 # Ensure window index numbers get reordered on delete.
 set-option -g renumber-windows on
@@ -45,11 +49,11 @@ setw -g pane-base-index 1
 # Enable full mouse support.
 set -g mouse on
 
-# Various colors.
-set -g status-style fg=colour244
-set -g window-status-current-style fg=colour222
-set -g pane-border-style fg=colour240
-set -g pane-active-border-style fg=colour243
+# # Various colors.
+# set -g status-style fg=colour244
+# set -g window-status-current-style fg=colour222
+# set -g pane-border-style fg=colour240
+# set -g pane-active-border-style fg=colour243
 
 set -g status-left ''
 set -g status-left-length 0
@@ -102,6 +106,52 @@ set -g @tmux_window_dir_programs "['nvim', 'vim', 'vi', 'git']"
 set -g @tmux_window_name_max_name_len "20"
 set -g @tmux_window_name_use_tilde "False"
 
+# # Default statusbar color
+# set-option -g status-style bg=colour240,fg=colour226 # bg=bg1, fg=fg1
+
+# # Default window title colors
+# set-window-option -g window-status-style bg=colour202,fg=colour237 # bg=yellow, fg=bg1
+
+# # Default window with an activity alert
+# set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+
+# # Active window title colors
+# set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+
+# # Set active pane border color
+# set-option -g pane-active-border-style fg=colour220
+
+# # Set inactive pane border color
+# set-option -g pane-border-style fg=colour239
+
+# Message info
+set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+
+# # Writing commands inactive
+# set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+
+# # Pane number display
+# set-option -g display-panes-active-colour colour1 #fg2
+# set-option -g display-panes-colour colour237 #bg1
+
+# # Clock
+# set-window-option -g clock-mode-colour colour124 #blue
+
+set-window-option -g window-status-current-format "\
+#[fg=colour12, bg=colour16] #I* \
+#[fg=colour12, bg=colour16, bold] #W \
+#[fg=colour235, bg=colour235]"
+# #[fg=colour235, bg=colour235]
+
+set-window-option -g window-status-format "\
+#[fg=colour250, bg=colour238] #I \
+#[fg=colour250, bg=colour238] #W \
+#[fg=colour232, bg=colour232]"
+# #[fg=colour232, bg=colour232,noitalics]
+
+# Remove space between status
+set-window-option -g window-status-separator ''
+
 # Statusbar style left
 # set-option -g status on
 # set-option -g status-interval 2
@@ -121,21 +171,22 @@ set -g @tmux_window_name_use_tilde "False"
 
 set -g status on
 set -g status-interval 2
-set -g status-justify right
+set -g status-justify centre
 set -g status-keys vi
 set -g status-position bottom
-set -g status-style fg=colour136,bg=colour235
+set -g status-style fg=colour232,bg=colour232
 set -g status-left-length 60
-set -g status-left '#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]'
-set -g status-right-length 60
-set -g status-right "#[fg=colour15,bg=black,bold] %H:%M#[default] #[fg=colour226]%a %d-%m-%Y#[default]"
+set -g status-left "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load -c -q -v -l 52 -r 16 -i 2)#[default]"
+# set -g status-left "#[fg=blue]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --vertical-graph --colors --powerline-right --interval 2)#[default]"
+set -g status-right-length 40
+set -g status-right "#[fg=colour190]%R #[fg=colour135] #[fg=colour153]%a #[fg=colour135] #[fg=colour190]%d-%m-%Y#[default]"
 # set -g status-right "#[fg=colour11]#(ip route | awk '/default/ { print $3 }')#[fg=colour40] #(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') #[fg=colour15,bg=black,bold]%a %H:%M#[default] #[fg=colour226]%d-%m-%Y#[default]"
 
-# Statusbar windows statusbar
-setw -g window-status-style fg=colour244
-setw -g window-status-style bg=default
-setw -g window-status-current-style fg=colour166
-setw -g window-status-current-style bg=default
+# # Statusbar windows statusbar
+# setw -g window-status-style fg=colour244
+# setw -g window-status-style bg=black
+# setw -g window-status-current-style fg=colour166
+# setw -g window-status-current-style bg=black
 
 # tmux-resurrect
 set -g @resurrect-hook-post-save-all 'eval $(xdotool getwindowgeometry --shell $WINDOWID); echo 0,$X,$Y,$WIDTH,$HEIGHT > $HOME/.tmux/resurrect/geometry'
