--- a/etc/wsl.conf
+++ b/etc/wsl.conf
@@ -12,10 +12,21 @@ options="metadata,umask=22,fmask=11"
 # hostname = deb11
 generateHosts = true			# false for empty hosts file
 generateResolvConf = false		# false to manually add nameserver
+allow_wsl_network_access = true
+enable_wsl_network_adapter = true
+#wsl_network_adapter_name = wsl2
+#wsl_network_adapter_ipv4_address_type = static
+#wsl_network_adapter_ipv4_address = 192.168.100.100
+#wsl_network_adapter_ipv4_subnet_mask = 255.255.255.0
+#wsl_network_adapter_ipv4_gateway = 192.168.100.1
+#wsl_network_adapter_ipv4_dns_server = 8.8.8.8
 
 [interop]
 enabled=true                       	# enable launch of Windows binaries; default is true
 appendWindowsPath=false             	# append Windows path to $PATH variable; default is true
+enable_wsl_path_lookup = true
+enable_wsl_drive_mounts = true
+enable_wsl_unix_socket_support = true
 
 [user]
 default = scudzy
