--- a/.config/tealdeer/config.toml
+++ b/.config/tealdeer/config.toml
@@ -36,4 +36,4 @@ auto_update = false
 auto_update_interval_hours = 720
 
 [directories]
-custom_pages_dir = /home/scudzy/.cache/tealdeer/tldr-pages/
+custom_pages_dir = "/home/scudzy/.cache/tealdeer/tldr-pages/"
